# ollama-api

./: pyproject.toml
src/ollama_api/: __init__.py
