[project]
name = "ollama-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "PSRahul", email = "psrahul.ml@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.2.0",
]

[project.scripts]
ollama-api = "ollama_api:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
